--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -9,6 +9,7 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    avoid_print: ignore
     prefer_const_constructors: ignore
     use_build_context_synchronously: ignore
 include: package:flutter_lints/flutter.yaml
