--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -35,13 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  collection: ^1.16.0
-  flutter_gpu_filters_interface: ^0.0.18
   flutter_gpu_video_filters:
     path: ../
   path_provider: ^2.0.11
-  image_picker: ^0.8.4+11
   gallery_saver: ^2.3.2
+  gal: ^2.3.0
+  flutter_gpu_filters_interface: ^0.0.18
 
 dev_dependencies:
   flutter_test:
