--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   gallery_saver: ^2.3.2
   gal: ^2.3.0
   flutter_gpu_filters_interface: ^0.0.18
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
