--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   gal: ^2.3.0
   flutter_gpu_filters_interface: ^0.0.18
   image_picker: ^1.1.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
